[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh_primitives"
version = "5.0.0"
description = "Deprecated — use agent-governance-toolkit-core instead. Shared primitive data models for Agent OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com" }
]
keywords = [
    "agent",
    "ai",
    "llm",
    "primitives",
    "models",
    "failures",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "agent-governance-toolkit-core>=5.0.0,<6.0",
    "pydantic>=2.13.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0",
    "mypy>=2.1.0,<3.0",
    "ruff>=0.15.20,<1.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit.git"
Issues = "https://github.com/microsoft/agent-governance-toolkit/issues"

# Dep-only deprecation stub: the published wheel ships NO source, it only
# redirects to agent-governance-toolkit-core (see [project].dependencies). The
# `agent_primitives` top-level package is owned solely by -core, which
# force-includes ../agent-primitives/agent_primitives. Shipping it here too would
# put the same top-level import path in two distributions and cause an
# order/version-dependent "Frankenstein" install. An empty `packages` list builds
# a wheel with no package of its own. The agent_primitives/ tree stays in-repo for
# CI (which imports it via the editable -core install) and as the source of truth
# force-included by -core.
[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
