[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acs-generator"
version = "0.1.0"
description = "Agentic policy artifact generator for Agent Control Specification"
requires-python = ">=3.11"
dependencies = [
  "agent-control-specification",
  "jsonschema>=4.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
acs-generate = "acs_generator.cli:main"

[tool.setuptools]
packages = ["acs_generator"]

[tool.pytest.ini_options]
pythonpath = ["."]
