[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycelium_agt"
version = "0.1.0"
description = "Mycelium Trails backend for AGT — tamper-evident action accountability for autonomous agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    { name = "giskard09", email = "playplay2736@gmail.com" }
]
keywords = ["mycelium", "trails", "action-ref", "accountability", "agents", "governance", "agentmesh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agent-os-kernel>=3.5.0",
]

[project.optional-dependencies]
http = ["httpx>=0.24.0"]
dev = [
    "pytest>=7.0,<9.0",
    "ruff>=0.1.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/giskard09/argentum-core"
Repository = "https://github.com/giskard09/argentum-core"
Issues = "https://github.com/giskard09/argentum-core/issues"
Verification = "https://argentum-api.rgiskard.xyz/trails/verify"

[tool.hatch.build.targets.wheel]
packages = ["mycelium_agt"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
