[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshell-agentmesh"
version = "3.6.0"
description = "Public Preview - OpenShell + AgentMesh governance skill"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com" }]
dependencies = ["pyyaml>=6.0,<7.0"]

[project.optional-dependencies]
agentmesh = ["agentmesh-platform>=3.0,<4.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"

[tool.hatch.build.targets.wheel]
packages = ["openshell_agentmesh"]

[project.scripts]
openshell-governance = "openshell_agentmesh.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
