[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshell-agentmesh"
version = "4.0.0"
description = "Deprecated. Previously published as openshell-agentmesh. Install agent-governance-toolkit-integrations[openshell] instead."
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
dependencies = ["agent-governance-toolkit-integrations[openshell]>=4.0.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
"Migration Guide" = "https://github.com/microsoft/agent-governance-toolkit/blob/main/docs/package-consolidation/MIGRATION.md"

[tool.hatch.build.targets.wheel]
packages = ["openshell_agentmesh"]
