[package]
name = "agent_control_specification_otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "OpenTelemetry bridge for Agent Control Specification telemetry"
license = "MIT"

[dependencies]
agent_control_specification_core = { path = "../../core" }
opentelemetry = { version = "0.31", features = ["metrics"] }

[dev-dependencies]
serde_json = "1"
